tests/lean/string_gaps_err_newline.lean.expected.out
string_gaps_err_newline.lean:2:0: error: unexpected additional newline in string gap
