tests/lean/string_gaps_err_newline.lean
/-!
# String gaps error test

A string gap shouldn't have more than one trailing newline according to RFC #2838
-/

#eval "a\

b"
